--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
     text-align: center;
 }
 
-.start {
+#start {
     background-color: rgb(73, 73, 180);  
     color: white;
     padding: 15px 32px;
@@ -66,4 +66,14 @@ h1 {
     font-size: 15px;
     margin: 2px 2px;
     border: 2px solid;
+}
+
+#question {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    text
+}
+
+.hide {
+    visibility: hidden;
 }
